modify picture syntax

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h1>Samantha Leong</h1>
 
-<img src="picture.jpg" alt="Photo of Samantha" id="pic">
+<img src=picture.jpg alt="Photo of Samantha" id="pic">
 <br/>
 
 <a href="resume.html">Resume</a>
