add classes and more rules to stylesheet

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 
+<div class="index">
 <h1>Samantha Leong</h1>
 
 <img src=picture.jpg alt="Photo of Samantha" id="pic">
 <br/>
 
+<div class="links">
 <a href="resume.html">Resume</a>
 <a href="bio.html">Bio</a>
+</div>
+</div>
 
 </body>
 </html>
