--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,8 @@
 <h3>Samantha Leong</h3>
 
 <h3>Education</h3>
-<p>Tufts University (May 2020)<br/>
+<p>Tufts University (May 2020)
+<br/>
 <ul>
 	<li>School of Arts and Sciences</li>
 	<li>Major: Undecided</li>
@@ -20,7 +21,8 @@
 </p>
 
 <h3>Professional Experience</h3>
-<p>Scholastic Library Publishing Intern (Jun 2017-Aug 2017)<br/>
+<p>Scholastic Library Publishing Intern (Jun 2017-Aug 2017)
+<br/>
 <ul>
 	<li>Competitor research that culminated in a comprehensive
 		competitor analysis presentation</li>
@@ -36,7 +38,8 @@
 <p>C++</p>
 
 <h3>Activities</h3>
-<p>The Book Fairies Volunteer (Jun 2017-Aug 2017)<br/>
+<p>The Book Fairies Volunteer (Jun 2017-Aug 2017)
+<br/>
 <ul>
 	<li>Grant Research Volunteer</li>
 	<li>Researched and identified foundations with grants that The
