fix the same resume error

--- a/resume.html
+++ b/resume.html
@@ -12,16 +12,15 @@
 <h3>Samantha Leong</h3>
 
 <h3>Education</h3>
-<p>Tufts University (May 2020)
+<p>Tufts University (May 2020)</p>
 <br/>
 <ul>
 	<li>School of Arts and Sciences</li>
 	<li>Major: Undecided</li>
 </ul>
-</p>
 
 <h3>Professional Experience</h3>
-<p>Scholastic Library Publishing Intern (Jun 2017-Aug 2017)
+<p>Scholastic Library Publishing Intern (Jun 2017-Aug 2017)</p>
 <br/>
 <ul>
 	<li>Competitor research that culminated in a comprehensive
@@ -32,13 +31,12 @@
 		and public librarians</li>
 	<li>Photo research for various Spring 2018 titles</li>
 </ul>
-</p>
 
 <h3>Skills</h3>
 <p>C++</p>
 
 <h3>Activities</h3>
-<p>The Book Fairies Volunteer (Jun 2017-Aug 2017)
+<p>The Book Fairies Volunteer (Jun 2017-Aug 2017)</p>
 <br/>
 <ul>
 	<li>Grant Research Volunteer</li>
@@ -46,7 +44,6 @@
 		Book Fairies might be viable for based on subjects, target
 		populations, and location.</li>
 </ul>
-</p>
 
 </body>
 </html>
